fix: front-end problem with hour

--- a/Project/src/views/tasks/edit.hbs
+++ b/Project/src/views/tasks/edit.hbs
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group p-1">
                             <select class="form-select" aria-label="Default select example" name="priorityLevel" value="{{task.priorityLevel}}">
-                                <option selected>Nivel de prioridad</option>
+                                <option selected>{{task.priorityLevel}}</option>
                                 <option value="1">Muy alta</option>
                                 <option value="2">Alta</option>
                                 <option value="3">Normal</option> 
