--- a/Project/src/views/partials/navigation.hbs
+++ b/Project/src/views/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light p-4 " style="background-color: #e3f2fd;">
     <div class="container">
-        <a class="navbar-brand" href="/task/finished">Tareas</a>
+        <a class="navbar-brand" href="/task/finished">Tareas pendientes</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
