--- a/Project/src/views/tasks/listFinished.hbs
+++ b/Project/src/views/tasks/listFinished.hbs
@@ -1,5 +1,15 @@
 <div class="container p-4">
     <div class="row">
+        <table class="table table-striped p-4">
+        
+            <tr class="table-success">
+                <th style="width:40%"><h5>Tareas Completadas</h5> </td>
+                <th style="width:30%"></td>
+                <th style="width:30%"></td>
+                <th style="width:10%"></td>
+            </tr>
+        
+        </table>
         {{#each tasks}}
             <div class="col-md-3 p-2">
                 <div class="card text-center p-4">
@@ -13,9 +23,9 @@
                     <p>
                         {{priorityLevel}} 
                     </p>
-                    <p>
+                    {{!-- <p>
                         {{timeago createdAt}}
-                    </p>
+                    </p> --}}
                     <a href="/task/delete/{{id}}" class="btn btn-danger m-2"> Eliminar </a>
                 </div>
             </div>
