--- a/Project/src/views/tasks/add.hbs
+++ b/Project/src/views/tasks/add.hbs
@@ -5,7 +5,7 @@
                 <div class="card-body">
                     <form action="/task/add" method="POST">
                         <div class="form-group p-1">
-                            <h1 class="text-center">Agraga una tarea</h1>
+                            <h1 class="text-center">Agregar una tarea</h1>
                         </div>
                         <div class="form-group p-1">
                             <input type="text" name="title" class="form-control" placeholder="Tarea" autofocus>
